# notificador-iof-mg

./: .dockerignore  .gitignore  AZURE_DEPLOY.md  Dockerfile  README.md  credential-noslash.json  entrypoint.sh  env.example  env.example.md  gunicorn_config.py  prompt-inicial-projeto-iof.txt  pyproject.toml  run.py  test_all_phases.py  test_phase1_backtest.py  test_phase1_crud.py  test_phase1_validations.py  test_phase2_email.py  test_phase2_integration.py  test_phase2_notify.py  test_phase3_error_handling.py  test_phase3_fts5_search.py  test_phase3_multiple_configs.py  wsgi.py
.github/workflows/: build.yml  deploy.yml
app/: __init__.py  cli.py  config.py  extensions.py
app/api/: __init__.py  features.py  search_config.py  tasks.py
app/iof/: __init__.py  common.py
app/mailer/: __init__.py  azure_provider.py  csv_generator.py  mailer.py  message.py  notification.py  provider.py  smtp_provider.py  unsubscribe.py
app/models/: __init__.py  search_config.py  user.py
app/pdf/: __init__.py  extractor.py
app/repositories/: document_interface.py  search_config_repository.py  sqlite_document_repository.py
app/schemas/: search_config.py
app/search/: __init__.py  source.py
app/services/: __init__.py  gazette_service.py  search_service.py  user_service.py
app/tasks/: __init__.py  daily_gazette.py  notify.py
app/templates/: auth_error.html  auth_limit_reached.html  backtest.html  base.html  create.html  edit.html  index.html  login.html  redirect_to_entra.html  unsubscribe_result.html
app/utils/: db_init.py  errors.py
app/web/: auth.py  routes.py
iof/: __init__.py  client.py  common.py  download.py
iof/v1/: consulta.py
jornal_downloaded/: pdf_base64_2026-01-09.txt  resposta_api_2026-01-09.json  resumo_2026-01-09.txt
jornal_downloaded/texto_extraido/: pagina_001.txt  pagina_002.txt  pagina_003.txt  pagina_004.txt  pagina_005.txt  pagina_006.txt  pagina_007.txt  pagina_008.txt  pagina_009.txt  pagina_010.txt  pagina_011.txt  pagina_012.txt  pagina_013.txt  (+35 more)
mailer/: __init__.py  csv_generator.py  mailer.py  notification.py
migrations/: env.py
old_tests/: CORRECAO_FINAL.md  CORRECAO_ORDEM_EXECUCAO.md  DOCKER.md  FASE1_COMPLETA.md  GUIA_TESTES.md  IMPLEMENTACAO.md  PROCESSO_DOWNLOAD.md  README.md  SOLUCAO_ERRO_TABELA.md  TESTE_LOCAL_PASSO_A_PASSO.md  create_test_pdf.py  download_and_save_journal.py  fix-database.sh  prompt-inicial-projeto-iof.txt  rebuild-and-test.sh  test-api-bearer.sh  test-api-final.sh  test-api-query-fixed.sh  test-api-query.sh  test-api-simple.sh  test-api-uv.sh  test-api.sh  test-container-direct.sh  test-direct.sh  test-docker.sh  test-final.sh  test-simple.sh  test-with-encoding.sh  test_api_complete.py  test_api_simple.py  test_api_v1_dates.py  test_install.py  test_iof_methods.py  test_mvp0.py  test_mvp1.py  test_mvp2.py  test_mvp3.py  testar-correcao.sh
pdf/: __init__.py  extractor.py
search/: __init__.py  schema.sql  source.py
tests/: conftest.py  test_api.py  test_backtest_mail.py  test_mailer.py  test_search_service.py  test_unsubscribe.py
(+10 files in other folders)
