[project]
name = "notificador-iof-mg"
version = "0.1.0"
description = "Sistema de notificações do Diário Oficial de MG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.9.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "gunicorn>=21.2.0",
    "tabulate>=0.9.0",
    "openpyxl>=3.1.5",
    "email-validator>=2.3.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "iof", "pdf", "search", "mailer"]
