[project]
name = "notificador-iof-mg"
version = "0.1.0"
description = "Sistema de notificações do Diário Oficial de MG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.9.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "gunicorn>=21.2.0",
    "tabulate>=0.9.0",
    "openpyxl>=3.1.5",
    "email-validator>=2.3.0",
    "msal>=1.24.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "azure-communication-email>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "iof", "pdf", "search", "mailer"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
# Change to your Python version
python_version = "3.13"
mypy_path = "typings"
strict = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "C90", "B", "C4", "UP", "RUF", "SIM", "PIE", "PERF", "FURB", "FLY",
    "S", "BLE", "EM", "RSE", "TRY", "ANN", "FA", "TCH", "PYI", "ARG", "FBT", "RET", "SLF",
    "TID", "ICN", "INP", "LOG", "G", "A", "ISC", "DTZ", "ASYNC", "PT", "PTH", "PL", "T10",
    "T20", "ERA", "PGH", "YTT", "SLOT", "EXE"
]

ignore = [
    "ISC001", "ANN401", "PLR0913", "PLR2004", "EM101", "EM102", "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", "ARG001", "ARG002", "PLR2004", "SLF001", "S603", "S607", "PLC0415", "ASYNC221"
]
"__init__.py" = [
    "F401"
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-returns = 8
max-statements = 64

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
